java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/ValueBadReference.java
class Test {
  /**
   * Value is {@value #<error descr="Cannot resolve symbol 'badReference'">badReference</error>}
   * @param ppp .
   */
  public void i(int ppp) {}
}